<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share Drive</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_list_view">List of drives</string>
    <string name="title_activity_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="birthday">Birthday</string>
    <string name="first_and_second_name">First and Second name</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="title_activity_advanced_info">AdvancedInfoActivity</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="_go_back">&lt;&lt; Go Back</string>
    <string name="country"><u>Country</u></string>
    <string name="city"><u>City</u></string>
    <string name="title_activity_create_trip_from">CreateTripFrom</string>
    <string name="title_activity_create_trip_to">CreateTripTo</string>
    <string name="title_activity_create_trip_extra">CreateTripExtra</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="enter_start_address">Enter start address</string>

    <string-array name="trip_vehicles">
        <item>Car</item>
        <item>Van</item>
        <item>Motor</item>
        <item>Other</item>
    </string-array>
    <string-array name="trip_payments">
        <item>Free</item>
        <item>Paid</item>
    </string-array>
    <string-array name="trip_status">
        <item>Active</item>
        <item>Finished</item>
        <item>Closed</item>
        <item>Cancelled</item>
    </string-array>

</resources>