<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/radialback"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Main" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="@dimen/login_size" />

    <TextView
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/main_etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_username"
        android:hint="@string/enter_your_username" />

    <TextView
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/main_etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/main_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:src="@drawable/button_login" />

    <CheckBox
        android:id="@+id/chkRememberPass"
        android:text="Remember credentials"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip" />
        <TextView
        style="@android:style/TextAppearance.Small"
        android:id="@+id/txtGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Go to Register Page"
        android:textColor="#FFF" />
</LinearLayout>