<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/radialback"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:padding="5dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/like" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/dislike" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toLeftOf="@+id/imageView2"
            android:gravity="right"
            android:id="@+id/txtDislike"
            android:text="89"
            android:textColor="#F00"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView1"
            android:layout_toRightOf="@+id/imageView1"
            android:id="@+id/txtLike"
            android:text="23"
            android:textColor="#00F"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:gravity="center_horizontal"
        android:text="Personal information"
        android:textColor="#FFF"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/personal_etNameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_name_surname"
        android:hint="@string/first_and_second_name" />

    <TextView
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="#FFF" />

    <Spinner
        android:id="@+id/personal_ddlYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

    <EditText
        android:id="@+id/personal_etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_username"
        android:editable="false"
        android:hint="@string/enter_your_username" />

    <EditText
        android:id="@+id/personal_etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/personal_etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_email"
        android:hint=" Enter your Email" />

    <ImageView
        android:id="@+id/personal_btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_update" />

    <TextView
        android:id="@+id/txtGoToAdvanced"
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Advanced information >>"
        android:textColor="#FFF" />

</LinearLayout>